# github-to-receipt

./: .gitignore  README.md  env.example  main.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  req.txt  run_server.py  tailwind.config.js
server/: __init__.py  main.py  receipt_test.py
src/: App.tsx  index.css
src/components/: GitHubInputScreen.tsx  LoadingScreen.tsx  ReceiptScreen.tsx  SplashScreen.tsx  VirtualKeyboard.tsx
src/services/: githubApi.ts
src/types/: github.ts
