[project]
name = "github-to-receipt"
version = "0.1.0"
description = "GitHub 정보를 영수증으로 변환하는 키오스크 애플리케이션"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.4.0",
    "python-multipart>=0.0.6",
    "appdirs==1.4.4",
    "argcomplete==3.6.2",
    "colorama==0.4.6",
    "importlib-resources==6.5.2",
    "libusb-package==1.0.26.3",
    "libusb1==3.3.1",
    "pillow==11.3.0",
    "pyserial==3.5",
    "python-barcode==0.16.1",
    "python-escpos==3.1",
    "pywin32==311",
    "pyyaml==6.0.2",
    "qrcode==8.2",
    "setuptools==80.9.0",
    "six==1.17.0",
    "uv==0.8.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
